--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,7 @@
 node_modules
 /build
 /.svelte-kit
-/package
+/.vercel
 .env
 .env.*
 !.env.example
-vite.config.js.timestamp-*
-vite.config.ts.timestamp-*
