--- a/package.json
+++ b/package.json
@@ -12,17 +12,18 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^2.0.0",
-		"@sveltejs/kit": "^1.20.4",
+		"@sveltejs/adapter-auto": "^2.1.0",
+		"@sveltejs/kit": "^1.21.0",
 		"autoprefixer": "^10.4.14",
 		"postcss": "^8.4.24",
-		"prettier": "^2.8.0",
+		"prettier": "^2.8.8",
 		"prettier-plugin-svelte": "^2.10.1",
-		"svelte": "^4.0.0",
-		"svelte-check": "^3.4.3",
+		"prettier-plugin-tailwindcss": "^0.3.0",
+		"svelte": "^4.0.1",
+		"svelte-check": "^3.4.4",
 		"tailwindcss": "^3.3.2",
-		"typescript": "^5.0.0",
-		"vite": "^4.3.6"
+		"typescript": "^5.1.6",
+		"vite": "^4.3.9"
 	},
 	"type": "module"
 }
